@@ -1,3 +1,9 @@
+2008-05-15  Paolo Bonzini  <bonzini@gnu.org>
+
+	* bootstrap.sh.in: Define bool, true, false.  Reported by
+	Jason Stover.  Adjust for gnulib changes.
+	* bootstrap.sh: Regenerate.
+
 2008-04-24  Paul Eggert  <eggert@twinsun.com>
 
 	* sed/compile.c (match_slash): Treat 's&foo&\&&' compatibly with
